--- a/Status.Web/Pages/Master.cshtml
+++ b/Status.Web/Pages/Master.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Status</title>
     <script src="/Assets/JavaScript/JQuery.js"></script>
-    <link href="/Assets/CSS/Main.css" rel="stylesheet" />
+    <link href="/Assets/CSS/Main.css?v=1" rel="stylesheet" />
     <script src="/Assets/JavaScript/Chart.min.js"></script>
 </head>
 <body>
