Added media query.

--- a/Status.Web/Pages/Index.cshtml
+++ b/Status.Web/Pages/Index.cshtml
@@ -113,7 +113,7 @@
                             }
                         }
                     };
-                    $("#CPU").remove();
+                    $("#CPU_Container").html("");
                     $("#CPU_Container").append("<canvas id='CPU'></canvas>");
 
                     var div = document.getElementById("CPU");
