--- a/Status.Web/Pages/Master.cshtml
+++ b/Status.Web/Pages/Master.cshtml
@@ -2,10 +2,10 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Status</title>
     <script src="/Assets/JavaScript/JQuery.js"></script>
-    <link href="/Assets/CSS/Main.css?v=1" rel="stylesheet" />
+    <link href="/Assets/CSS/Main.css?v=2" rel="stylesheet" />
     <script src="/Assets/JavaScript/Chart.min.js"></script>
 </head>
 <body>
