--- a/Status.Web/wwwroot/Assets/CSS/Main.css
+++ b/Status.Web/wwwroot/Assets/CSS/Main.css
@@ -13,5 +13,13 @@ html, body
 #CPU_Container
 {
     margin:0 auto;
-    width:60vw;
+    width:60%;
+}
+
+@media only screen and (max-width: 768px)
+{
+    #CPU_Container
+    {
+        width:100%;
+    }
 }
