--- a/Status.Web/Pages/Index.cshtml
+++ b/Status.Web/Pages/Index.cshtml
@@ -26,9 +26,51 @@
 
     $(window).ready(function()
     {
+        //var ctx = document.getElementById('CPU').getContext('2d');
+
+        //var chart = new Chart(ctx, {
+
+        //    type: 'line',
+
+        //    data: {
+
+        //        datasets: [{
+
+        //            data: []
+
+        //        }]
+
+        //    },
+
+        //    options: {
+
+        //        scales: {
+
+        //            xAxes: [{
+
+        //                type: 'realtime',
+        //                realtime:
+        //                {
+        //                    onRefresh: function(chart)
+        //                    {
+        //                        chart.data.datasets[0].data.push(
+        //                            {
+        //                                x: Date.now(),
+        //                                y: Math.random()
+        //                            });
+        //                    }
+        //                }
+
+        //            }]
+
+        //        }
+
+        //    }
+
+        //});
         Load();
     });
-    setInterval(Refresh, 5000);
+    //setInterval(Refresh, 5000);
 
     function Load()
     {
@@ -42,7 +84,8 @@
 
                     var
                         aspectRatio = 2,
-                        o = 0;
+                        o = 0,
+                        a = 3557500;
 
                     if ($(window).innerWidth() > 1024)
                     {
@@ -53,6 +96,7 @@
                         Chart.defaults.global.defaultFontSize = 12;
                         aspectRatio = 1;
                         o = 30;
+                        a = a / 2;
                     }
 
                     $("#RAM").html(Math.round(result[result.length - 1].ram) + "%");
@@ -63,13 +107,7 @@
                     }
                     $("#Disks").html(disks);
                     $("#Created").html(result[result.length - 1].time.replace("-", "/").replace("-", "/"));
-                    var time = [];
-                    var cpu = [];
-                    for (o; o < result.length; o++)
-                    {
-                        time.push(result[o].time.substring(result[o].time.lastIndexOf(" ") + 1));
-                        cpu.push(result[o].cpu);
-                    }
+
 
 
                     var config =
@@ -77,7 +115,6 @@
                         type: 'line',
                         data:
                         {
-                            labels: time,
                             datasets:
                                 [{
                                     backgroundColor: "#c50c51",
@@ -86,7 +123,6 @@
                                     lineTension: 0.4,
                                     borderJoinStyle: "round",
                                     borderCapStyle: "round",
-                                    data: cpu,
                                     fill: true
                                 }]
                         },
@@ -133,6 +169,62 @@
                                         {
                                             display: false,
                                             labelString: 'Time'
+                                        },
+                                        type: 'realtime',
+                                        realtime:
+                                        {
+                                            duration: a,
+                                            refresh: 1000,
+                                            delay: 2000,
+                                            onRefresh: function(chart)
+                                            {
+                                                $.ajax
+                                                    ({
+                                                        type: 'GET',
+                                                        url: '/Get/LatestReading',
+                                                        success: function(result)
+                                                        {
+                                                            if (chart.data.datasets[0].data[chart.data.datasets[0].data.length - 1].x != result.created)
+                                                            {
+                                                                chart.data.datasets[0].data.push
+                                                                    (
+                                                                        {
+                                                                            x: result.created.replace("T", " ").substring(0, result.created.lastIndexOf(".")),
+                                                                            y: result.cpu,
+                                                                        }
+                                                                    );
+                                                            }
+
+                                                            if ($(window).innerWidth() > 1024)
+                                                            {
+                                                                Chart.defaults.global.defaultFontSize = 18;
+                                                                window.myLine.options.aspectRatio = 2;
+                                                                window.myLine.options.scales.xAxes[0].realtime.duration = 3557500;
+                                                            }
+                                                            else
+                                                            {
+                                                                Chart.defaults.global.defaultFontSize = 12;
+                                                                window.myLine.options.aspectRatio = 1;
+                                                                window.myLine.options.scales.xAxes[0].realtime.duration = 1778750;
+                                                            }
+                                                        }
+                                                    });
+                                            }
+                                        },
+                                        time:
+                                        {
+                                            displayFormats:
+                                            {
+                                                millisecond: 'HH:mm',
+                                                second: 'HH:mm',
+                                                minute: 'HH:mm',
+                                                hour: 'HH:mm',
+                                                day: 'HH:mm',
+                                                week: 'HH:mm',
+                                                month: 'HH:mm',
+                                                quarter: 'HH:mm',
+                                                year: 'HH:mm',
+                                            }
                                         }
                                     }],
                                 yAxes:
@@ -160,13 +252,23 @@
                         }
                     };
 
-                    $("#CPU_CanvasContainer").append("<canvas id='CPU'></canvas>");
+                    $("#CPU_CanvasContainer").append("<canvas id='CPU' aria-label='CPU Chart' role='chart'></canvas>");
 
                     var div = document.getElementById("CPU");
                     var ctx = div.getContext('2d');
 
                     window.myLine = new Chart(ctx, config);
 
+                    for (o; o < result.length; o++)
+                    {
+                        window.myLine.data.datasets[0].data.push(
+                            {
+                                x: result[o].created.replace("T", " ").substring(0, result[o].created.lastIndexOf(".")),
+                                y: result[o].cpu
+                            });
+                    }
+
+                    window.myLine.update();
                 },
                 error: function(e)
                 {
@@ -223,25 +325,25 @@
                     if ($("#Created").html() != result[result.length - 1].time.replace("-", "/").replace("-", "/"))
                         $("#Created").html(result[result.length - 1].time.replace("-", "/").replace("-", "/"));
 
-                    var time = [];
-                    var cpu = [];
-                    for (o; o < result.length; o++)
-                    {
-                        time.push(result[o].time.substring(result[0].time.lastIndexOf(" ") + 1));
-                        cpu.push(result[o].cpu);
-                    }
+                    //var time = [];
+                    //var cpu = [];
+                    //for (o; o < result.length; o++)
+                    //{
+                    //    time.push(result[o].time.substring(result[0].time.lastIndexOf(" ") + 1));
+                    //    cpu.push(result[o].cpu);
+                    //}
 
-                    if (chart.data.datasets[0].data != cpu)
-                    {
-                        chart.data.datasets[0].data = cpu;
-                        chart.data.labels = time;
-                        update = true;
-                    }
+                    //if (chart.data.datasets[0].data != cpu)
+                    //{
+                    //    chart.data.datasets[0].data = cpu;
+                    //    chart.data.labels = time;
+                    //    update = true;
+                    //}
 
-                    if (update)
-                    {
-                        chart.update();
-                    }
+                    //if (update)
+                    //{
+                    //    chart.update();
+                    //}
                 }
             });
     }
