--- a/Status.Web/Pages/Master.cshtml
+++ b/Status.Web/Pages/Master.cshtml
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Status</title>
     <script src="/Assets/JavaScript/JQuery.js"></script>
-    <link href="/Assets/CSS/Main.css?v=7" rel="stylesheet" />
+    <link href="/Assets/CSS/Main.css?v=8" rel="stylesheet" />
+    <script src="~/Assets/JavaScript/Moment.js"></script>
     <script src="/Assets/JavaScript/Chart.min.js?v=1"></script>
+    <script src="~/Assets/JavaScript/chartjs-plugin-streaming.min.js"></script>
 </head>
 <body>
         @RenderBody()
